# mediaxx

./: .clang-format  .gitignore  .gitmodules  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/run/bool/mediaxx/: MediaxxPlugin.java
android/src/main/java/run/bool/mediaxxandroidhelper/: MediaxxAndroidHelper.java
benchmark/: ffmpeg.dart
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/mediaxx_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: mediaxx.podspec
lib/: mediaxx.dart  mediaxx_bindings_generated.dart
lib/ffi/: allocation.dart  type.dart  utf8.dart
linux/: CMakeLists.txt
macos/: mediaxx.podspec
macos/Classes/: mediaxx.c
script/: debug_build.bat  debug_build.sh  release_build.bat  run_debug_test.bat  win_create_dll_def.bat
src/: CMakeLists.txt  mediaxx.cpp  mediaxx.h
src/ffmpeg-help/: libmpv-android-symbols.txt  libmpv-android.cpp  libmpv-android.def  libmpv-android.lds  libmpv-win-symbols.rsp  libmpv-win-symbols.txt  libmpv-win.cpp  libmpv-win.def
src/impl/: mediaxx.cpp
src/impl/android/: impl.cpp
src/lib/analyse/: audio_visualization.cpp  audio_visualization.h  codec_info.h  hwanalyse.h  media_info_reader.cpp  media_info_reader.h  tool.h
src/lib/util/: json_helper.h  log.cpp  log.h  string_util.h  utilxx.cpp  utilxx.h
src/test/: CMakeLists.txt  test.cpp
src/third_part/ffmpeg/include/libavutil/: error.h  file.h  timestamp.h
test/: widget_test.dart
windows/: CMakeLists.txt
